# loki

./: .gitignore  CHANGELOG.md  README.md
loki/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
loki/.github/workflows/: ci.yml  release.yml
loki/src/: App.tsx  index.css
loki/src-tauri/: Cargo.toml  tauri.conf.json
loki/src-tauri/assets/: shell-integration.bash  shell-integration.fish  shell-integration.zsh
loki/src-tauri/capabilities/: default.json
loki/src-tauri/icons/: icon.icns
loki/src-tauri/src/: ai.rs  main.rs  mcp.rs  pty.rs
loki/src/ai/: command-suggester.ts  context-collector.ts  context-helpers.ts  error-analyzer.ts  manager.ts  provider.ts  types.ts
loki/src/hooks/: useKeyBindings.ts
loki/src/lib/: clipboard.ts  config-io.ts  keybindings.ts  markdown.ts  tauri.ts  updater.ts
loki/src/mcp/: client.ts  types.ts
loki/src/plugin/: events.ts  loader.ts  storage.ts  types.ts
loki/src/plugin/examples/: word-count.ts
loki/src/store/: chat.ts  config.ts  mcp.ts  plugins.ts  terminal.ts  update.ts
loki/src/terminal/: ansi-to-html.ts  block-manager.ts  emulator.ts  shell-integration.ts  types.ts
loki/src/theme/: built-in-themes.ts  index.ts  types.ts
loki/src/ui/: BlockList.tsx  BlockSearch.tsx  BlockToolbar.tsx  BlockView.tsx  ChatPanel.tsx  CommandSuggestion.tsx  ErrorAnalysis.tsx  Layout.tsx  ModelSwitcher.tsx  PluginManager.tsx  Settings.tsx  StatusBar.tsx  TabBar.tsx  Terminal.tsx  UpdateBanner.tsx
loki/src/ui/settings/: GeneralTab.tsx  KeybindingsTab.tsx  McpTab.tsx  ModelsTab.tsx  ThemeTab.tsx
