[package]
name = "loki"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "sync"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
